# opengive

./: .env.docker  .env.docker.example  .env.example  .gitignore  CLAUDE.md  LICENSE  PRD.md  README.md  SPRINT8_COMPLETION.md  claude-flow.config.json  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.md  data_source_request.md  feature_request.md
.github/workflows/: ci.yml  deploy-preview.yml  deploy-production.yml
apps/api/: package.json  tsconfig.json
apps/docs/: docusaurus.config.ts  package.json  (+1 more)
docker/: kong.yml
scripts/: migrate.sh  seed-dev.sh  setup.sh  supabase-setup.sh
services/pipeline/: Dockerfile  pyproject.toml  railway.toml  requirements.txt
services/pipeline/dagster_pipeline/: __init__.py
services/pipeline/dagster_pipeline/assets/: __init__.py  australia_acnc.py  batch_anomaly_detection.py  batch_embeddings.py  batch_entity_resolution.py  batch_scoring.py  canada_cra.py  france_rna.py  iati.py  india_scrapers.py  oecd_dac.py  uk_360giving.py  uk_charity_commission.py  unocha_fts.py  us_propublica.py
services/pipeline/dagster_pipeline/resources/: __init__.py  supabase.py
services/pipeline/dagster_pipeline/utils/: normalize.py  tracking.py
services/pipeline/scrapers/: middlewares.py  pipelines.py  settings.py
services/pipeline/scrapers/playwright_scrapers/: gcc_ministry_portals.py  india_fcra_portal.py
services/pipeline/scrapers/spiders/: india_mca.py  india_ngo_darpan.py
services/pipeline/tests/: test_assets_normalize.py  test_normalize.py  test_tracking.py
(+97 files in other folders)
