[project]
name = "opengive-pipeline"
version = "0.0.1"
description = "OpenGive data pipeline - Dagster assets + Scrapy spiders"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.9.0",
    "dagster-webserver>=1.9.0",
    "scrapy>=2.11.0",
    "playwright>=1.48.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "supabase>=2.10.0",
    "structlog>=24.4.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "dagster-webserver>=1.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
